--- a/src/port.css
+++ b/src/port.css
@@ -312,36 +312,97 @@ background-color:#f8bce3;
 @media (max-width:1200px){
   .about{
     float: right;
+    margin: 10px;
     margin-top: 100px;
     display: block;
     height: fit-content;
 }
-.page{
-  float: left;
-  
-  margin-left: 10px;
-  display: block;
-  height: fit-content;
-}
+
 .name{
   float: left;
+  width: 100%;
+  margin-left: 10px;
+  display: block;
+  height: fit-content;
+}
+
+}
+@media(max-width:500px){
+  .img1{
+    float: left;
+    width: 100%;
+    position: relative;
+    margin-left: 10px;
+    display: block;
+    height: fit-content;
+  }
+  .img2{
+display: none;
+  }
+  .img3{
+    float: left;
+    width: 100%;
+    margin: 20px;
+    position: relative;
+    
+    display: block;
+    height: fit-content;
+  }
+  .page{
+    float: left;
+    
+    margin-left: 10px;
+    display: block;
+    height: fit-content;
+  }
+  .img3 img{
+    float:none;
+   
+    position: relative;
+      margin: 20px;
+      display: block;
+      height: fit-content;
+  }
+  .i1{
+    float: left;
+    width: fit-content;
+    margin: 0;
+    margin-right: 0;
+    display:none;
+    height: fit-content;
+  }
+  .i2{
+    display: none;
+  }
+  .i3 {
+display: none;
+  }
+  .i5{
+    display: none;
+  }
+  .img1 img{
+    float:none;
+   
+  position: relative;
+    margin: 20px;
+    display: block;
+    height: fit-content;
+  }
+}
+@media(max-width:1200px){
+   
+  .about{
+      float: right;
+      margin-top: 80px;
+      display: block;
+      margin-left: 50px;
+      height: fit-content;
+  }
+  .about-container{
   
-  margin-left: 10px;
-  display: block;
-  height: fit-content;
-}
-.img1 .img2 .img3{
-  float: left;
-  position: relative;
-  margin-left: 10px;
-  display: block;
-  height: fit-content;
-}
-.i1 .i2 .i3{
-  float: left;
-  position: relative;
-  margin-left: 10px;
-  display: block;
-  height: fit-content;
-}
+      margin-top: 80px;
+    flex-wrap: wrap;
+      height: fit-content;
+      display: inline-block;
+  }
 }
