--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -294,6 +294,7 @@ justify-content: center;
 .project1{
     width: 100%;
     height: 400px;
+    position: relative;
     display: flex;
     background-color:rgb(240, 191, 200) ;
     padding: 20px;
@@ -320,33 +321,9 @@ justify-content: center;
 }
 
 
-/* -----------------------media--------------------------
-@media only screen and (max-width:768px){
-    .container,form{
-        width: 90%;
-        margin-left: 10%;
-    }
-    #result{
-        margin-left: 0;
-        margin-right: 5%;
-    }
-    #down{
-        margin-right: 20em;
-        margin-bottom: 20em;
-    }
-} */
+/* -----------------------media--------------------------*/
 @media (max-width:1330px){
-    /* .about-main-container .project-container .main{
-        height: auto;
-        width: 100%;
-        flex-wrap: wrap;
-    }
-    .right-sidebar .name{
-        height: auto;
-        flex-wrap: wrap;
-        
-    }
-     */
+    
     .main{
         float: left;
         
@@ -388,7 +365,7 @@ justify-content: center;
  
     .project{
          float: left;
-        margin-left: 21px;
+       margin: 0;
         display: block;
         height: fit-content;
     }
@@ -400,7 +377,7 @@ justify-content: center;
      }
      .project1{
         float: left;
-        margin-left: 21px;
+       margin: 0;
          display: block;
          width: 100%;
          height: fit-content;
