--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -47,6 +47,7 @@
 .name a{
     margin: 20px;
     position: relative;
+    padding: 2px;
     text-decoration: none;
     font-size: 20px;
     color: #6f0a4c;
@@ -55,9 +56,14 @@
     justify-content: center; */
 }
 .name a:hover{
-    border-radius: 10%;
+    border-radius: 12%;
     background-color: #9c0159;
     color: azure;
+    font-size: 25px;
+   
+    padding: 5px;
+    width: 50px;
+    height: 40px;
 }
 .logo-jcimg{
     margin: 10px;
@@ -82,6 +88,7 @@
 .jnv-img img{
     width: 200px;
     height: 300px;
+    box-shadow: 1px 1px 8px rgb(205, 236, 236);
     border-radius: 5%;
     float: right; 
     position: relative;
@@ -375,8 +382,25 @@ justify-content: center;
          display: block;
          height: fit-content;
      }
-     .project1{
+     .quote-img img{
         float: left;
+        margin-left: 21px;
+         display: block;
+         margin: 20px;
+         height: fit-content;
+     }
+     .painting-img img{
+        float: left;
+        margin: 20px;
+        position: relative;
+        margin-left: 21px;
+         display: block;
+         height: fit-content;
+     }
+     .project1{
+        float: right;
+        padding: 0;
+        margin-left: 0;
        margin: 0;
          display: block;
          width: 100%;
