--- a/src/port.css
+++ b/src/port.css
@@ -60,7 +60,7 @@ p{
  }
 .page p{
   font-size: 5rem;
-  text-shadow:-2px -2px 6px rgba(59, 5, 5, 0.6);
+  text-shadow:2px 2px 2px rgba(17, 2, 2, 0.6);
 
   color: #550030; 
   position: relative;
@@ -307,7 +307,7 @@ background-color:#f8bce3;
 .logo-jcimg img{
   width: 100px;
   height: 100px;
-  
+  box-shadow: 2px 2px 2px black;
   object-fit: cover;
   border-radius: 50%;
 }
