--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -28,7 +28,7 @@
     position: relative;
     margin-bottom: 0;
     font-size: 30px;
-    color: #8e1e81;
+    color: #e1079f;
     align-items: center;
     justify-content: center;
 }
@@ -38,7 +38,7 @@
     position: relative;
     
     font-size: 20px;
-    color:#E11299;
+    color:#66005c;
     align-items: center;
     justify-content: center;
      
@@ -50,7 +50,7 @@
     padding: 2px;
     text-decoration: none;
     font-size: 20px;
-    color: #6f0a4c;
+    color: #66005c;
     font-weight: 600;
     /* align-items: center;
     justify-content: center; */
@@ -74,7 +74,7 @@
 .logo-jcimg img{
     width: 100px;
     height: 100px;
-    
+    box-shadow: 2px 2px 2px black;
     object-fit: cover;
     border-radius: 50%;
 }
@@ -132,7 +132,11 @@ justify-content: center;
 } 
 .about ul li a{
     text-decoration: none;
-    color: #550030;
+    background-image: linear-gradient(to right, rgb(240, 237, 107), rgb(211, 15, 139));
+-webkit-background-clip: text;
+-webkit-text-fill-color:transparent;
+cursor: pointer;
+transition: 0.4s;
     list-style:none;
     font-size: 20px;
 }        
@@ -140,7 +144,7 @@ justify-content: center;
     content: '';
     width: 100%;
     height: 2px;
-    background: #69005b;
+    background: #af0677;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -164,6 +168,7 @@ justify-content: center;
      border-radius: 50%;
      object-fit: cover;
      margin: 10px;
+     box-shadow: 2px 2px 3px black;
 }
 .icon{
     display: flex;
@@ -214,7 +219,7 @@ justify-content: center;
 .email p{
     font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: #42002b;
+    color: #a90478;
     margin: 10px;
 }
 .email p:hover{
@@ -223,6 +228,7 @@ justify-content: center;
 .email img{
     width: 30px;
     height: 30px;
+    box-shadow: 2px 2px 3px black;
     border-radius: 50%;
     object-fit: cover;
     margin: 10px;
